[gd_scene load_steps=2 format=3 uid="uid://cppv34tsb831q"]

[ext_resource type="Script" uid="uid://dwal8h8emb0l5" path="res://Entities/Characters/Components/hitbox.gd" id="1_cxbni"]

[node name="Hitbox" type="Area2D"]
script = ExtResource("1_cxbni")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
